--- a/WEEK1/css/style.css
+++ b/WEEK1/css/style.css
@@ -54,3 +54,28 @@ button.decimal{
 button:hover{
     background-color: #5a5a5a;
 }
+body.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+body.dark-mode .Calculator {
+    background-color: #2c2c2c;
+}
+
+body.dark-mode input {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+body.dark-mode button {
+    background-color: #333333;
+    color: #ffffff;
+}
+
+body.dark-mode button:hover {
+    background-color: #444444;
+}
+.themeToggle{
+    margin-bottom: 10px;
+}
